# nf-variable-generator

./: .gitignore  main.py  notionapi.py  pyproject.toml  variablegenerator.py  variableprocessor.py
